--- a/app/globals.css
+++ b/app/globals.css
@@ -53,6 +53,11 @@
   -webkit-backdrop-filter: blur(8px);
 }
 
+.cl-providerIcon__github{
+  filter: invert(1);
+}
+
+
 /* ==== clerk class override ===== */
 
 .cl-userButtonPopoverActionButtonIcon {
